# pyterm-mcp

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  SKILL.md  justfile  pyproject.toml  ruff.toml  ty.toml
.codex/environments/: environment.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml  validate.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
scripts/: push-ready
src/pyterm_mcp/: __init__.py  auto_cli.py  cli.py  main.py  return_types.py  types.py
tests/: __init__.py  conftest.py  test_client.py  test_pyterm_mcp.py
