[project]
name = "pyterm-mcp"
version = "0.1.0"
description = "A reliable iTerm MCP server that leverages the iTerm2 Python API."
readme = "README.md"
authors = [
  {name = "Nicholas Corbin", email = "nickcorbin17@yahoo.com"}
]
maintainers = [
  {name = "Nicholas Corbin", email = "nickcorbin17@yahoo.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.27.1",
    "iterm2-api-wrapper",
    "pydantic>=2.12.5",
]
requires-python = ">= 3.12"

[project.optional-dependencies]
custom_packages = []


[dependency-groups]
dev = [
    "rust-just",
    "cookiecutter>=2.6.0",
    "alabaster>=1.0.0",
    "watchdog>=6.0.0",
    "sphinx",
    "furo",
    "typer",
    "pytest",
    "pytest-cov",
    "rich",
    "myst-parser>=4.0.1",
]


[build-system]
requires = ["uv_build >= 0.11.12, <0.12.0"]
build-backend = "uv_build"


[project.urls]
bugs = "https://github.com/iLiftALot/pyterm_mcp/issues"
changelog = "https://github.com/iLiftALot/pyterm_mcp/blob/master/changelog.md"
homepage = "https://github.com/iLiftALot/pyterm_mcp"

[project.scripts]
pyterm_mcp = "pyterm_mcp.main:main"
pyterm_dev = "pyterm_mcp.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests", "packages/iterm2-api-wrapper/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest.log"
log_file_mode = "a"
log_file_level = "INFO"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-vv -l"
# Option	            Description
# -v or -vv	          Verbose output
# -l or --showlocals	Show local variables in tracebacks
# -ll                 Show all locals in tracebacks
# -s	                Don't capture stdout (show print statements)
# --tb=long           Full tracebacks
# --tb=short	        Shorter tracebacks
# --tb=no	            No tracebacks
# -x	                Stop on first failure
# --ff	              Run failed tests first
# -q	                Quiet mode
# --durations=10	    Show 10 slowest tests

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
iterm2_api_wrapper = { workspace = true }

[tool.setuptools.packages.find]
where = ["src"]
