[project]
name = "pyterm-mcp"
version = "0.1.0"
description = "A reliable iTerm MCP server that leverages the iTerm2 Python API."
readme = "README.md"
authors = [{ name = "Nicholas Corbin", email = "nickcorbin17@yahoo.com" }]
maintainers = [{ name = "Nicholas Corbin", email = "nickcorbin17@yahoo.com" }]
classifiers = [
  # TODO
]
license = "MIT"
dependencies = [
  "fastmcp>=3.4.2",
  "iterm2-api-wrapper",
  "pydantic==2.13.4",
]
requires-python = ">= 3.12"

[project.urls]
bugs = "https://github.com/iLiftALot/pyterm_mcp/issues"
changelog = "https://github.com/iLiftALot/pyterm_mcp/blob/master/changelog.md"
homepage = "https://github.com/iLiftALot/pyterm_mcp"

[project.scripts]
pyterm_dev = "pyterm_mcp.cli:app"
pyterm_mcp = "pyterm_mcp.main:main"
pyterm_test = "pyterm_mcp.auto_cli:app"

[project.optional-dependencies]
custom_packages = []

[dependency-groups]
dev = [
  "alabaster==1.0.0",
  "furo==2025.12.19",
  "ipython==9.14.1",
  "myst-parser==5.1.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "python-dotenv==1.2.2",
  "rich==15.0.0",
  "rust-just==1.53.0",
  "sphinx==9.1.0",
  "watchdog==6.0.0",
]
ci = [
    "ruff"
]

[build-system]
requires = ["uv_build >= 0.11.23, <0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "-vv -l"
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_level = "INFO"
log_file = "logs/pytest.log"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_level = "INFO"
log_file_mode = "a"
python_classes = ["Test*", "*Test"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
testpaths = ["tests", "packages/iterm2-api-wrapper/tests"]
# Option	            Description
# -v or -vv	          Verbose output
# -l or --showlocals	Show local variables in tracebacks
# -ll                 Show all locals in tracebacks
# -s	                Don't capture stdout (show print statements)
# --tb=long           Full tracebacks
# --tb=short	        Shorter tracebacks
# --tb=no	            No tracebacks
# -x	                Stop on first failure
# --ff	              Run failed tests first
# -q	                Quiet mode
# --durations=10	    Show 10 slowest tests

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
iterm2_api_wrapper = { workspace = true }
